// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectFundingForm renders correctly with default empty values 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-direction-xs-column"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Add Funding Agency"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
          tabindex="0"
          title="Add Funding Agency"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Add Funding Agency
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column"
      >
        <div
          class="MuiBox-root MuiBox-root-1"
        >
          <div
            class="MuiBox-root MuiBox-root-2"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-3"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  No Funding Sources
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ProjectFundingForm renders correctly with existing funding values 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-direction-xs-column"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Add Funding Agency"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
          tabindex="0"
          title="Add Funding Agency"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Add Funding Agency
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column"
      >
        <div
          class="MuiBox-root MuiBox-root-4"
        >
          <div
            class="MuiBox-root MuiBox-root-5"
          >
            <div
              class="MuiBox-root MuiBox-root-6"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
              >
                <div
                  class="MuiBox-root MuiBox-root-7"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item"
                      >
                        <h3
                          class="MuiTypography-root MuiTypography-h3"
                        >
                          agency 1
                        </h3>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item"
                      >
                        <button
                          aria-label="Edit Funding Source"
                          class="MuiButtonBase-root MuiIconButton-root"
                          tabindex="0"
                          title="Edit Funding Source"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Delete Funding Source"
                          class="MuiButtonBase-root MuiIconButton-root"
                          tabindex="0"
                          title="Delete Funding Source"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-grid-xs-12"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Funding Amount
                        </p>
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          222
                        </p>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Start Date / End Date
                        </p>
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          March 14, 2021 - April 14, 2021
                        </p>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Agency Project ID
                        </p>
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          111
                        </p>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Investment Action
                        </p>
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          action 1
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
